adjust html5 template for build work

--- a/coolstrap-gen/lib/coolstrap-gen/templates/app/index.html.haml.erb
+++ b/coolstrap-gen/lib/coolstrap-gen/templates/app/index.html.haml.erb
@@ -2,8 +2,8 @@
   <%= app_name %>
 
 = content_for :application_styles do
-  = stylesheet_link_tag "coolstrap/themes/coolstrap"
-  = stylesheet_link_tag "customtheme.css"
+  -#= stylesheet_link_tag "coolstrap/themes/coolstrap"
+  -#= stylesheet_link_tag "customtheme.css"
 
 = content_for :principal do
   %div{"role" => "main"}
@@ -18,5 +18,5 @@
 
 
 = content_for :application_js do
-  = javascript_include_tag "app.js"
-  = javascript_include_tag "router.js"
+  -#= javascript_include_tag "app.js"
+  -#= javascript_include_tag "router.js"
