--- a/coolstrap-gen/lib/coolstrap-gen/templates/app/layout.haml.erb
+++ b/coolstrap-gen/lib/coolstrap-gen/templates/app/layout.haml.erb
@@ -64,16 +64,41 @@
   = yield_content(:application_styles)
   -# All JavaScript at the bottom, except this Modernizr build.
   -# Modernizr enables HTML5 elements & feature detects for optimal performance.
-  = javascript_include_tag "coolstrap/lib/modernizr-2.5.3"
+  -#= javascript_include_tag "coolstrap/lib/modernizr-2.5.3"
 
 %body
 
   = yield_content(:principal)
 
   / Third parties dependencies
-  = javascript_include_tag "coolstrap/lib/zepto-1.0rc1"
-  = javascript_include_tag "coolstrap/lib/iscroll"
+  -#= javascript_include_tag "coolstrap/lib/zepto-1.0rc1"
+  -#= javascript_include_tag "coolstrap/lib/iscroll"
 
   / CoolStrapp Libraries (Development mode)
   = javascript_include_tag "application"
   = yield_content(:application_js)
+  :javascript
+    // Wait for Cordova to load
+    // 
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+    // Cordova is loaded and it is now safe to make calls Cordova methods
+    //
+    function onDeviceReady() {
+        checkConnection();
+    }
+
+    function checkConnection() {
+        var networkState = navigator.network.connection.type;
+
+        var states = {};
+        states[Connection.UNKNOWN]  = 'Unknown connection';
+        states[Connection.ETHERNET] = 'Ethernet connection';
+        states[Connection.WIFI]     = 'WiFi connection';
+        states[Connection.CELL_2G]  = 'Cell 2G connection';
+        states[Connection.CELL_3G]  = 'Cell 3G connection';
+        states[Connection.CELL_4G]  = 'Cell 4G connection';
+        states[Connection.NONE]     = 'No network connection';
+
+        alert('Connection type: ' + states[networkState]);
+    }
